@@ -17,8 +17,12 @@ Build-Depends: debhelper-compat (= 12),
                meson (>= 0.48),
                libgirepository1.0-dev (>= 0.9.5),
                apache2 (>= 2.4) <!nocheck !pkg.libsoup2.4.noinsttests>,
-               php <!nocheck !pkg.libsoup2.4.noinsttests>,
+               libapache2-mod-php (>= 2:7) <!nocheck !pkg.libsoup2.4.noinsttests>,
+               libapache2-mod-php (<< 2:8) <!nocheck !pkg.libsoup2.4.noinsttests>,
+               php (>= 2:7) <!nocheck !pkg.libsoup2.4.noinsttests>,
+               php (<< 2:8) <!nocheck !pkg.libsoup2.4.noinsttests>,
                php-xmlrpc <!nocheck !pkg.libsoup2.4.noinsttests>,
+               python3,
                curl <!nocheck !pkg.libsoup2.4.noinsttests>,
                libnss-myhostname <!nocheck>,
                valac
@@ -216,6 +220,8 @@ Section: misc
 Architecture: any
 Depends: apache2 (>= 2.4),
          curl,
+         libapache2-mod-php (>= 2:7),
+         libapache2-mod-php (<< 2:8),
          libnss-myhostname,
          php,
          php-xmlrpc,
